# cineplex

./: .gitignore  README.md  cineplex.py  fix_files.py  playlists.json  pyproject.toml  scratch.ipynb
cineplex/: __init__.py  __main__.py  config.py  db.py  logger.py  playlists.py  settings.py  utils.py  videos.py  youtube.py  youtube_channels.py  youtube_playlists.py  youtube_videos.py
cineplex/youtube/: __init__.py  api.py  channel.py  playlist.py  playlist_item.py  video.py
data/: bad_db_videos.json  bad_metadata.json  channel_ids.json  file_index_metadata.json  file_index_thumbnails.json  file_index_videos.json  file_list_metadata.json  file_list_remove.json  file_list_thumbnails.json  file_list_videos.json  file_list_videos_clean.json  file_list_videos_deduped.json  offline_channels.json  offline_playlists.json  playlist_items_PLIjhfluhNd993BDLibKRMpcm5Z-QUwqiM.json  playlist_items_PLIjhfluhNd9_spzQ_pDyWR0nmjV_w0cOW.json  playlists_UC-lHJZR3Gqxm24_Vd_AJ5Yw.json  playlists_UClXK00EtgGK2n1hhgqDqvDQ.json  playlists_UCqsUJL5xIWuidR7sIrPLhAw.json  video_fragments.json
data/channels/: channel_UC-2YHgc363EdcusLIBbgxzg.json  channel_UC-37003PCbpc7LKXZMosZVA.json  channel_UC-3TwXj20oJQNQcRs-6BLlw.json  (+2411 more)
raytube/: db.py  playlists.py  settings.py  utils.py  youtube.py
tests/: test_cineplex.py  test_raytube.py
tmp/: How to Deploy a Dockerized Svelte App to Azure-gdg4ne_uDm8.f248.webm.part  How to Deploy a Dockerized Svelte App to Azure-gdg4ne_uDm8.f248.webm.ytdl  SvelteKit Crash Course Follow Up - Deploy Your Project to Production-qD4wJ62NIZc.f303.webm.ytdl
(+1984 files in other folders)
